[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio="1.18.1"
serde_json="1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
futures = "0.3.21"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
